Fix header covering heading targets

--- a/assets/custom.sass
+++ b/assets/custom.sass
@@ -51,3 +51,11 @@ $link-focus-border: $blue !default
 
 $link-active: $grey-darker !default
 $link-active-border: $grey-dark !default
+
+h1::before
+  display: block; 
+  content: " "; 
+  margin-top: -64px; 
+  height: 64px; 
+  visibility: hidden; 
+  pointer-events: none;
